--- a/examples/site/stylesheets/sass/_select_lists.sass
+++ b/examples/site/stylesheets/sass/_select_lists.sass
@@ -13,7 +13,10 @@ body#select_list_page
         -webkit-border-radius: 5px
         -moz-border-radius: 5px
         border-radius: 5px  
+        select 
+          width: 100%
         ul
+          padding: 0px
           li
             color: #323232
             font-size: 18px
@@ -21,6 +24,8 @@ body#select_list_page
             text-align: center
             list-style: none
   [data-ur-set="select-list"]
+    text-align: center
+    
   [data-ur-id="MyUIDSelectList"][data-ur-select-list-component="content"]
     color: #FAFAFA
     text-align: left
