integrate the full examples into the toggler page

--- a/examples/site/stylesheets/base.css
+++ b/examples/site/stylesheets/base.css
@@ -876,19 +876,16 @@ body#togglers_page *[data-ur-toggler-component='button'][data-ur-state='enabled'
 /* line 13, sass/_toggler.sass */
 body#togglers_page *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
   display: block; }
-/* line 15, sass/_toggler.sass */
-body#togglers_page ul[data-ur-toggler-component="content"] {
-  margin-left: 10px; }
-/* line 19, sass/_toggler.sass */
+/* line 17, sass/_toggler.sass */
 body#togglers_page .components [data-ur-toggler-component='button'] {
   background: none; }
-/* line 27, sass/_toggler.sass */
+/* line 25, sass/_toggler.sass */
 body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='button'] {
   border-radius: 5px;
   background-color: #ffd700;
   opacity: 1;
   padding: 5px; }
-/* line 32, sass/_toggler.sass */
+/* line 30, sass/_toggler.sass */
 body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='content'] {
   display: none;
   position: absolute;
@@ -900,10 +897,10 @@ body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='content'] {
   bottom: 50px;
   text-align: center;
   padding-top: 30px; }
-  /* line 43, sass/_toggler.sass */
+  /* line 41, sass/_toggler.sass */
   body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
     display: block; }
-/* line 48, sass/_toggler.sass */
+/* line 46, sass/_toggler.sass */
 body#togglers_page .popup_button {
   border-radius: 5px;
   background-color: #ffd700;
@@ -911,7 +908,7 @@ body#togglers_page .popup_button {
   padding: 5px;
   display: inline;
   margin: 0px 5px; }
-  /* line 55, sass/_toggler.sass */
+  /* line 53, sass/_toggler.sass */
   body#togglers_page .popup_button > span {
     border-radius: 5px;
     background-color: #ffd700;
@@ -919,7 +916,7 @@ body#togglers_page .popup_button {
     padding: 5px;
     display: inline;
     margin: 0px 5px; }
-/* line 63, sass/_toggler.sass */
+/* line 61, sass/_toggler.sass */
 body#togglers_page .popup_content {
   position: absolute;
   border-radius: 5px;
@@ -927,42 +924,41 @@ body#togglers_page .popup_content {
   left: 200px;
   text-align: center;
   padding: 30px; }
-  /* line 73, sass/_toggler.sass */
+  /* line 71, sass/_toggler.sass */
   body#togglers_page .popup_content[data-ur-state='disabled'] {
     display: none;
     opacity: 0.5; }
-  /* line 76, sass/_toggler.sass */
+  /* line 74, sass/_toggler.sass */
   body#togglers_page .popup_content[data-ur-state='enabled'] {
     display: inline-block;
     opacity: 1; }
-    /* line 79, sass/_toggler.sass */
+    /* line 77, sass/_toggler.sass */
     body#togglers_page .popup_content[data-ur-state='enabled'] img {
       width: 200px;
       height: 200px; }
-/* line 85, sass/_toggler.sass */
+/* line 83, sass/_toggler.sass */
 body#togglers_page [name='MultipleContents'] .buttons {
   background-color: white;
   opacity: 1; }
-/* line 91, sass/_toggler.sass */
+/* line 89, sass/_toggler.sass */
 body#togglers_page .buttons[data-ur-state="enabled"] span:last-child, body#togglers_page .buttons[data-ur-state="disabled"] span:first-child {
   opacity: 0.5; }
-/* line 95, sass/_toggler.sass */
+/* line 93, sass/_toggler.sass */
 body#togglers_page [name='MultipleContents'] .popup_content {
   position: relative;
-  z-index: -1;
   width: 250px;
   height: 250px;
   padding: 20px; }
-  /* line 101, sass/_toggler.sass */
+  /* line 98, sass/_toggler.sass */
   body#togglers_page [name='MultipleContents'] .popup_content img {
     width: 200px;
     height: 200px; }
-/* line 104, sass/_toggler.sass */
+/* line 101, sass/_toggler.sass */
 body#togglers_page [name='MultipleContents'] [data-ur-toggler-component="content"] {
   display: inline-block; }
 
-/* line 109, sass/_toggler.sass */
-body#togglers_examples_page *[data-ur-toggler-component='button'] {
+/* line 106, sass/_toggler.sass */
+body#togglers_page *[data-ur-toggler-component='button'] {
   opacity: 0.5;
   border-radius: 5px;
   background-color: #ffd700;
@@ -980,8 +976,8 @@ body#togglers_examples_page *[data-ur-toggler-component='button'] {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px; }
-/* line 127, sass/_toggler.sass */
-body#togglers_examples_page *[data-ur-toggler-component='content'] {
+/* line 124, sass/_toggler.sass */
+body#togglers_page *[data-ur-toggler-component='content'] {
   display: none;
   background-color: #ffd700;
   border-radius: 5px;
@@ -998,30 +994,30 @@ body#togglers_examples_page *[data-ur-toggler-component='content'] {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px; }
-  /* line 144, sass/_toggler.sass */
-  body#togglers_examples_page *[data-ur-toggler-component='content'] li {
+  /* line 141, sass/_toggler.sass */
+  body#togglers_page *[data-ur-toggler-component='content'] li {
     color: black;
     margin-left: 30px; }
-  /* line 147, sass/_toggler.sass */
-  body#togglers_examples_page *[data-ur-toggler-component='content'] li[data-ur-set="toggler"] {
+  /* line 144, sass/_toggler.sass */
+  body#togglers_page *[data-ur-toggler-component='content'] li[data-ur-set="toggler"] {
     border: none;
     background: #fafafa; }
-    /* line 150, sass/_toggler.sass */
-    body#togglers_examples_page *[data-ur-toggler-component='content'] li[data-ur-set="toggler"] [data-ur-toggler-component="button"] {
+    /* line 147, sass/_toggler.sass */
+    body#togglers_page *[data-ur-toggler-component='content'] li[data-ur-set="toggler"] [data-ur-toggler-component="button"] {
       background: #fafafa;
       padding-top: 0px; }
-    /* line 153, sass/_toggler.sass */
-    body#togglers_examples_page *[data-ur-toggler-component='content'] li[data-ur-set="toggler"] [data-ur-toggler-component="content"][data-ur-state="enabled"] {
+    /* line 150, sass/_toggler.sass */
+    body#togglers_page *[data-ur-toggler-component='content'] li[data-ur-set="toggler"] [data-ur-toggler-component="content"][data-ur-state="enabled"] {
       background: #fafafa;
       width: 100px; }
-/* line 156, sass/_toggler.sass */
-body#togglers_examples_page *[data-ur-toggler-component='button'][data-ur-state='enabled'] {
+/* line 153, sass/_toggler.sass */
+body#togglers_page *[data-ur-toggler-component='button'][data-ur-state='enabled'] {
   opacity: 1; }
-/* line 158, sass/_toggler.sass */
-body#togglers_examples_page *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
+/* line 155, sass/_toggler.sass */
+body#togglers_page *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
   display: block; }
-/* line 166, sass/_toggler.sass */
-body#togglers_examples_page div[name='Dialog'] *[data-ur-toggler-component='button'] {
+/* line 163, sass/_toggler.sass */
+body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='button'] {
   border-radius: 5px;
   background-color: #ffd700;
   opacity: 1;
@@ -1038,8 +1034,8 @@ body#togglers_examples_page div[name='Dialog'] *[data-ur-toggler-component='butt
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px; }
-/* line 183, sass/_toggler.sass */
-body#togglers_examples_page div[name='Dialog'] *[data-ur-toggler-component='content'] {
+/* line 180, sass/_toggler.sass */
+body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='content'] {
   display: none;
   position: absolute;
   border-radius: 5px;
@@ -1050,68 +1046,72 @@ body#togglers_examples_page div[name='Dialog'] *[data-ur-toggler-component='cont
   bottom: 50px;
   text-align: center;
   padding-top: 30px; }
-  /* line 194, sass/_toggler.sass */
-  body#togglers_examples_page div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
+  /* line 191, sass/_toggler.sass */
+  body#togglers_page div[name='Dialog'] *[data-ur-toggler-component='content'][data-ur-state='enabled'] {
     display: block; }
-/* line 199, sass/_toggler.sass */
-body#togglers_examples_page .popup_button {
+/* line 196, sass/_toggler.sass */
+body#togglers_page .popup_button {
   border-radius: 5px;
   background-color: #ffd700;
   opacity: 1;
   padding: 5px;
   display: inline;
   margin: 0px 5px; }
-  /* line 206, sass/_toggler.sass */
-  body#togglers_examples_page .popup_button > span {
+  /* line 203, sass/_toggler.sass */
+  body#togglers_page .popup_button > span {
     border-radius: 5px;
     background-color: #ffd700;
     opacity: 1;
     padding: 5px;
     display: inline;
     margin: 0px 5px; }
-/* line 214, sass/_toggler.sass */
-body#togglers_examples_page .popup_content {
+/* line 211, sass/_toggler.sass */
+body#togglers_page .popup_content {
   position: absolute;
   border-radius: 5px;
   background-color: #aaaaaa;
   left: 270px;
   text-align: center;
   padding: 30px; }
-  /* line 224, sass/_toggler.sass */
-  body#togglers_examples_page .popup_content[data-ur-state='disabled'] {
+  /* line 221, sass/_toggler.sass */
+  body#togglers_page .popup_content[data-ur-state='disabled'] {
     display: none;
     opacity: 0.5; }
-  /* line 227, sass/_toggler.sass */
-  body#togglers_examples_page .popup_content[data-ur-state='enabled'] {
+  /* line 224, sass/_toggler.sass */
+  body#togglers_page .popup_content[data-ur-state='enabled'] {
     display: inline-block;
-    opacity: 1; }
-    /* line 230, sass/_toggler.sass */
-    body#togglers_examples_page .popup_content[data-ur-state='enabled'] img {
+    opacity: 1;
+    z-index: 10; }
+    /* line 228, sass/_toggler.sass */
+    body#togglers_page .popup_content[data-ur-state='enabled'] img {
       width: 200px;
       height: 200px; }
-/* line 238, sass/_toggler.sass */
-body#togglers_examples_page [name='MultipleContents'] .buttons[data-ur-state="enabled"] span:last-child, body#togglers_examples_page [name='MultipleContents'] .buttons[data-ur-state="disabled"] span:first-child {
+/* line 236, sass/_toggler.sass */
+body#togglers_page [name='MultipleContents'] .buttons[data-ur-state="enabled"] span:last-child, body#togglers_page [name='MultipleContents'] .buttons[data-ur-state="disabled"] span:first-child {
   opacity: 0.5; }
-/* line 242, sass/_toggler.sass */
-body#togglers_examples_page [name='MultipleContents'] .popup_content {
+/* line 240, sass/_toggler.sass */
+body#togglers_page [name='MultipleContents'] .popup_content {
   position: relative;
   width: 220px;
   height: 200px;
   padding: 20px; }
-  /* line 248, sass/_toggler.sass */
-  body#togglers_examples_page [name='MultipleContents'] .popup_content [data-ur-toggler-component="content"][data-ur-state="disabled"] img {
+  /* line 246, sass/_toggler.sass */
+  body#togglers_page [name='MultipleContents'] .popup_content [data-ur-toggler-component="content"][data-ur-state="disabled"] img {
     display: none; }
-  /* line 251, sass/_toggler.sass */
-  body#togglers_examples_page [name='MultipleContents'] .popup_content [data-ur-toggler-component="content"][data-ur-state="enabled"] img {
+  /* line 249, sass/_toggler.sass */
+  body#togglers_page [name='MultipleContents'] .popup_content [data-ur-toggler-component="content"][data-ur-state="enabled"] img {
     display: block; }
-  /* line 253, sass/_toggler.sass */
-  body#togglers_examples_page [name='MultipleContents'] .popup_content img {
+  /* line 251, sass/_toggler.sass */
+  body#togglers_page [name='MultipleContents'] .popup_content img {
     width: 200px;
     height: 200px; }
-/* line 257, sass/_toggler.sass */
-body#togglers_examples_page #disabled {
+/* line 255, sass/_toggler.sass */
+body#togglers_page #disabled {
   background: #323232;
   border: none; }
+/* line 258, sass/_toggler.sass */
+body#togglers_page div[data-ur-id='MyToggler'].buttons {
+  background-color: #ffd700 !important; }
 
 /* line 2, /Users/jeffpatzer/workspace/uranium/examples/site/stylesheets/sass/_tutorial.sass */
 body#tutorial_page *[data-ur-tabs-component='content'] {
