--- a/examples/site/stylesheets/sass/_tabs.sass
+++ b/examples/site/stylesheets/sass/_tabs.sass
@@ -65,52 +65,50 @@ body#tabs_page
     &[data-ur-tabs-component='content']
       background-color: white
       margin: 0px 20px
+  // Further examples
+  #tabs_examples_page
+    *
+      &[data-ur-tabs-component='button']
+        opacity: 0.5
+        background-color: #FFD700
+        border: 1px solid black
+        border-top-left-radius: 5px 5px
+        border-top-right-radius: 5px 5px
+        bottom: -1px
+        display: inline-block
+        margin: 0px 5px
+        padding: 5px
+        position: relative
+      &[data-ur-tabs-component='content']
+        display: none
+        background-color: #FFD700
+        border-radius: 5px
+      &[data-ur-tabs-component='button'][data-ur-state='enabled']
+        opacity: 1.0
+        border-bottom: 1px solid #FFD700
+      &[data-ur-tabs-component='content'][data-ur-state='enabled']
+        display: block
+        background-color: #FFD700
+        border: 1px solid black
+        padding: 20px
+      &[data-ur-set="tabs"][data-ur-tab-id="html"]
+        text-align: left
 
-//Tabs Example Page
+    #tab_widget *[data-ur-set="tabs"] *
+      &[data-ur-tabs-component="button"]
+        background: #FFD700
+      &[data-ur-tabs-component="content"]
+        background: #FFD700
 
-body#tabs_examples_page
-  *
-    &[data-ur-tabs-component='button']
-      opacity: 0.5
-      background-color: #FFD700
-      border: 1px solid black
-      border-top-left-radius: 5px 5px
-      border-top-right-radius: 5px 5px
-      bottom: -1px
-      display: inline-block
-      margin: 0px 5px
-      padding: 5px
-      position: relative
-    &[data-ur-tabs-component='content']
-      display: none
-      background-color: #FFD700
-      border-radius: 5px
-    &[data-ur-tabs-component='button'][data-ur-state='enabled']
-      opacity: 1.0
-      border-bottom: 1px solid #FFD700
-    &[data-ur-tabs-component='content'][data-ur-state='enabled']
-      display: block
-      background-color: #FFD700
-      border: 1px solid black
-      padding: 20px
-    &[data-ur-set="tabs"][data-ur-tab-id="html"]
-      text-align: left
+    // Accordions w state
 
-  #tab_widget *[data-ur-set="tabs"] *
-    &[data-ur-tabs-component="button"]
-      background: #FFD700
-    &[data-ur-tabs-component="content"]
-      background: #FFD700
-
-  // Accordions w state
-
-  div[name='accordions'] *
-    &[data-ur-tabs-component='button']
-      display: block
-      border: 1px solid black
-      background-color: #FFD700
-      border-radius: 5px
-    &[data-ur-tabs-component='content']
-      background-color: #FFD700
-      margin: 0px 20px
+    div[name='accordions'] *
+      &[data-ur-tabs-component='button']
+        display: block
+        border: 1px solid black
+        background-color: #FFD700
+        border-radius: 5px
+      &[data-ur-tabs-component='content']
+        background-color: #FFD700
+        margin: 0px 20px
 
