flex table documentation widget

--- a/examples/site/stylesheets/sass/_test.sass
+++ b/examples/site/stylesheets/sass/_test.sass
@@ -37,7 +37,7 @@ li[data-ur-set="toggler"]
 .components li 
   color: #323232
 
-.components *[data-ur-toggler-component="button"] 
+.components *[data-ur-toggler-component="button"], .components *[data-ur-flex-table-component] 
   color: #323232
   background: none
   font-weight: bold
