--- a/examples/site/stylesheets/sass/base.sass
+++ b/examples/site/stylesheets/sass/base.sass
@@ -1,3 +1,5 @@
+@import compass
+
 @import _carousel.sass
 @import _compatibility.sass
 @import _demonstration.sass
@@ -17,3 +19,4 @@
 @import _more.sass
 @import _swipe_toggle.sass
 @import _flex_table.sass
+@import _highlight_code.sass
