--- a/examples/site/_layouts/map-widget-sub.html
+++ b/examples/site/_layouts/map-widget-sub.html
@@ -23,7 +23,7 @@
     
     <div class="wrapper">
       <p>
-      <a href="{{site.url}}widgets/maps_.html">Back to Maps Widget</a>
+      <a href="{{site.url}}/widgets/maps.html">Back to Maps Widget</a>
       </p>
     </div>
     
