--- a/examples/site/stylesheets/sass/_test.sass
+++ b/examples/site/stylesheets/sass/_test.sass
@@ -8,36 +8,31 @@ li[data-ur-set="toggler"]
     &[data-ur-state="enabled"]
       display: block
 
-#textbody #babutton 
-  width: 98px 
-  height: 25px 
-  padding-top: 6px
-  font-size: 15px
-  text-align: center
-  float: right
-  display: inline-block
-  border-left: 1.5px solid rgb(80,80,80) 
-  border-right: 1.5px solid rgb(0,0,0)
+#basic_btn, #adv_btn
   -webkit-border-radius: 5px
   -moz-border-radius: 5px
   border-radius: 5px
+  border-left: 1.5px solid rgb(80,80,80)
+  border-right: 1.5px solid rgb(0,0,0)
+  background: #FFD700
+  color: #323232
+  display: inline-block
+  float: right
+  font-size: 15px
+  padding-top: 6px
+  text-align: center
+  width: 98px
+  height: 25px
+  &[data-ur-state="disabled"]
+    opacity: 0.3
 
-#babutton[data-ur-tab-id="advancedpage"]
+[data-ur-tab-id="advancedpage"]
   margin-right: 100px
 
-#babutton[data-ur-state="disabled"]
-  background: #FFD700
-  color: #323232
-  opacity: 0.2
-
-#babutton[data-ur-state="enabled"]
-  color: #323232
-  background: #FFD700
-
-.components li 
+.components li
   color: #323232
 
-.components *[data-ur-toggler-component="button"], .components *[data-ur-flex-table-component] 
+.components *[data-ur-toggler-component="button"], .components *[data-ur-flex-table-component]
   color: #323232
   background: none
   font-weight: bold
@@ -50,25 +45,25 @@ li[data-ur-set="toggler"]
   border-radius: 5px
 
 
-.attributes 
+.attributes
   margin-bottom: 15px
 
-.attributes h3 
-  color: #323232 
-
-.attributes *[data-ur-tabs-component="content"] li 
+.attributes h3
   color: #323232
 
-.attributes .inline_code 
+.attributes *[data-ur-tabs-component="content"] li
+  color: #323232
+
+.attributes .inline_code
   background: none
   color: #323232
 
-.attributes .set_name 
+.attributes .set_name
   padding: 5px
   font-weight: bold
   -webkit-border-radius: 5px
   -moz-border-radius: 5px
-  border-radius: 5px 
+  border-radius: 5px
   display: inline-block
   border: 2px dashed #FAFAFA
   margin-bottom: 10px
@@ -77,7 +72,7 @@ li[data-ur-set="toggler"]
 .attributes *[data-ur-tabs-component="content"] li *[data-ur-toggler-component="content"] li [data-ur-state="enabled"]
   color: #323232
 
-.attributes *[data-ur-tabs-component='button'] 
+.attributes *[data-ur-tabs-component='button']
   opacity: 0.5
   background: silver url('resources/largeshade.png') no-repeat left bottom
   border: 1px solid black
@@ -87,53 +82,53 @@ li[data-ur-set="toggler"]
   display: inline-block
   margin: 0px 5px
   padding: 5px
-  position: relative 
-.attributes *[data-ur-tabs-component='content'] 
+  position: relative
+.attributes *[data-ur-tabs-component='content']
   display: none
-  background: silver 
-.attributes *[data-ur-tabs-component='button'][data-ur-state='enabled'] 
+  background: silver
+.attributes *[data-ur-tabs-component='button'][data-ur-state='enabled']
   opacity: 1
   background: #FAFAFA
-  border-bottom: 1px solid #FAFAFA 
-.attributes *[data-ur-tabs-component='content'][data-ur-state='enabled'] 
+  border-bottom: 1px solid #FAFAFA
+.attributes *[data-ur-tabs-component='content'][data-ur-state='enabled']
   display: block
   background: #C0C0C0 url('resources/largestshade.png') no-repeat left bottom
   padding: 20px
   @include border-radius(5px)
-.attributes *[data-ur-set="tabs"][data-ur-tab-id="html"] 
-  text-align: left 
-.attributes #tab_widget *[data-ur-set="tabs"] *[data-ur-tabs-component="button"] 
-  background: silver 
-.attributes #tab_widget *[data-ur-set="tabs"] *[data-ur-tabs-component="content"] 
-  background: silver 
-.attributes .advanced_tab ul 
+.attributes *[data-ur-set="tabs"][data-ur-tab-id="html"]
+  text-align: left
+.attributes #tab_widget *[data-ur-set="tabs"] *[data-ur-tabs-component="button"]
+  background: silver
+.attributes #tab_widget *[data-ur-set="tabs"] *[data-ur-tabs-component="content"]
+  background: silver
+.attributes .advanced_tab ul
   list-style-type: none
   margin-bottom: 10px
 
-.attributes li[data-ur-set="toggler"] 
+.attributes li[data-ur-set="toggler"]
   padding: 10px
 
-.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='button'] 
+.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='button']
   background: none
   color: #323232
   padding: none
   border: 1px dashed #FAFAFA
   border-raduis: none
 
-.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='content'] 
-  display: none 
+.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='content']
+  display: none
 
-.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='content'][data-ur-state="enabled"] 
-  display: block 
+.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='content'][data-ur-state="enabled"]
+  display: block
   background: none
   width: 100%
   color: #323232
 
 
-.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='content'][data-ur-state="enabled"] li 
+.attributes li[data-ur-set="toggler"] [data-ur-toggler-component='content'][data-ur-state="enabled"] li
   color: #323232
 
-.attributes p.instance 
+.attributes p.instance
   color: #323232
 
 .css
