update carousel example

--- a/examples/site/_layouts/default.html
+++ b/examples/site/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>Uranium JS | {{ page.title }}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="{{site.url}}src/uranium-pretty.js"></script>
     <link rel="stylesheet" type='text/css' href='{{site.url}}stylesheets/style_index_yellow.css' />
     <link rel="stylesheet" type='text/css' href='{{site.url}}stylesheets/base.css' />
