--- a/examples/site/stylesheets/sass/_highlight_code.sass
+++ b/examples/site/stylesheets/sass/_highlight_code.sass
@@ -1,10 +1,9 @@
 .highlight
+  @include border-radius(10px)
   color: #F8F8F2
   background-color: rgb(40,40,40)
   border: 3px dashed rgb(60,60,60)
-  padding: 10px
-  @include border-radius(10px)
-  overflow: scroll
+  padding: 0 10px
   .hll
     background-color: #49483e
   .c
@@ -80,3 +79,5 @@
     color: #f8f8f2
   .il
     color: #ae81ff
+  pre
+    overflow-x: scroll
