--- a/examples/site/stylesheets/base.css
+++ b/examples/site/stylesheets/base.css
@@ -192,15 +192,20 @@ body#geocode_page div[name='Three'] img {
   #exselectlist [data-ur-state='enabled'] {
     background: #ffd700 url("resources/largeshade.png") no-repeat left bottom; }
 
-#excarousel *[data-ur-set="carousel"] *[data-ur-carousel-component="view_container"] {
+#excarousel [data-ur-set="carousel"] [data-ur-carousel-component="view_container"] {
   overflow-x: hidden; }
-  #excarousel *[data-ur-set="carousel"] *[data-ur-carousel-component="view_container"] *[data-ur-carousel-component="scroll_container"] {
-    display: block; }
-    #excarousel *[data-ur-set="carousel"] *[data-ur-carousel-component="view_container"] *[data-ur-carousel-component="scroll_container"] img {
-      display: inline-block;
-      float: left; }
-  #excarousel *[data-ur-set="carousel"] *[data-ur-carousel-component="view_container"] *[data-ur-carousel-component="button"][data-ur-state="disabled"] {
-    opacity: 0.3; }
+#excarousel [data-ur-set="carousel"] [data-ur-carousel-component="scroll_container"] {
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100px;
+  height: 100px; }
+  #excarousel [data-ur-set="carousel"] [data-ur-carousel-component="scroll_container"] img {
+    float: left;
+    width: 100px;
+    height: 100px; }
+#excarousel [data-ur-set="carousel"] [data-ur-carousel-component="button"][data-ur-state="disabled"] {
+  opacity: 0.3; }
 
 *[data-ur-map-component='canvas'] {
   width: 300px;
