tweak home page

--- a/examples/site/stylesheets/scss/_highlight_code.scss
+++ b/examples/site/stylesheets/scss/_highlight_code.scss
@@ -2,7 +2,7 @@
   color: #f8f8f2;
   background-color: rgb(40, 40, 40);
   border: 3px dashed rgb(60, 60, 60);
-  padding: 10px;
+  padding: 0 10px;
   @include border-radius(10px);
   overflow: scroll;
   .hll {
