--- a/examples/site/stylesheets/base.css
+++ b/examples/site/stylesheets/base.css
@@ -1133,7 +1133,7 @@ body#more_page [data-ur-set="toggler"] {
   color: #f8f8f2;
   background-color: #282828;
   border: 3px dashed #3c3c3c;
-  padding: 10px;
+  padding: 0 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   -o-border-radius: 10px;
