--- a/examples/site/stylesheets/scss/_swipe_toggle.scss
+++ b/examples/site/stylesheets/scss/_swipe_toggle.scss
@@ -1,1 +1,182 @@
-#swipe_toggle_page {}
+#swipe_toggle_page {
+  color: silver;
+
+  .swipe_Bar{
+
+    margin-bottom: 30px
+  }
+  .mw_swipe_dots > div {
+    display: inline-block;
+    background: green;
+    width: 4px;
+    height: 4px;
+    margin: 10px;
+  }
+  .mw_swipe_dots > [mw_swipe_toggle_dot="active"] {
+    background: black;
+  }
+
+  .attributes {
+    display: block;
+    background: silver url("resources/largestshade.png") no-repeat left bottom;
+    border: 1px solid black;
+    padding: 20px 20px 20px 40px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+
+    li {
+      color: black;
+    }
+  }
+
+  .example_code {
+    Background: silver;
+    color: black;
+    padding: 20px;
+    @include border-radius(5px);
+
+    .example_header {
+      position: relative;
+      font-weight: bold;
+
+      &:after {
+        content: "+";
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        margin-top: -10px;
+        font-weight: bold;
+        font-size: 16px;
+        border: 1px solid #999;
+        background: #aaa;
+        color: #666;
+        text-align: center;
+        line-height: 20px;
+        width: 20px;
+        height: 20px;
+        @include border-radius(10px);
+      }
+      
+      &[data-ur-state="enabled"]:after {
+        content: "-";
+      }
+
+    }
+    .example_content {
+      white-space: pre;
+      overflow: scroll;
+      background: #AAA;
+      @include transition(all 1s ease-in-out);
+
+      &[data-ur-state="disabled"] {
+        margin-top: 0;
+        line-height: 0;
+        font-size: 0;
+      }
+
+      &[data-ur-state="enabled"] {
+        margin-top: 10px;
+        line-height: 15px;
+        font-size: 14px;
+        border: 1px solid #999;
+      }
+    }
+  }
+  
+  [data-ur-swipe-toggle-component]{
+    padding: 10px;
+    border: 1px solid #ddd;
+    color: #555;
+    display: inline-block;
+  }
+  .swipe_Bar[data-ur-id="ima_live"]{
+    position: relative;
+    width: 100%;
+    text-align: center;
+    @include box-sizing(border-box)
+  }
+  [data-ur-swipe-toggle-component='next']{
+    float: right;
+  }
+  [data-ur-swipe-toggle-component='prev']{
+  }
+  [data-ur-swipe-toggle-component] > *{
+    display: inline-block
+  }
+  .mw_clear_both{
+    clear: both;
+  }
+  [data-ur-state='active']{
+    color: purple;
+  }
+  [data-ur-touched="true"]{
+    background: green;
+  }
+  .imageSwitcher{
+    height: 150px;
+    border: 0;
+    position: relative;
+    width: 90%;
+  }
+  .imageSwitcher > *{
+    position: absolute;
+    visibility: hidden;
+    left: 50%;
+    margin-left: -85px;
+  }
+
+  .imageSwitcher > [data-ur-state='active']{
+    visibility: visible;
+  }
+
+  img{
+    width: 150px;
+    height: 150px;
+  }
+
+  /*  amorphos shape swipe toggle */
+
+  .shape[data-ur-id="ima_shape"]{
+    position: relative;
+    width: 100%;
+    height: 250px;
+    @include box-sizing(border-box)
+  }
+  [data-ur-id="ima_shape"] > * {
+    -webkit-transition: all 0.5s ease-in-out;
+  }
+  [data-ur-id="ima_shape"] > [data-ur-state="active"]{
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    margin-left: -85px;
+  }
+  [data-ur-id="ima_shape"] > [data-ur-state="next1"]{
+    position: absolute;
+    top: 50px;
+    left: 0;
+    opacity: .5!important;
+  }
+  [data-ur-id="ima_shape"] > [data-ur-state="prev1"]{
+    position: absolute;
+    top: 100px;
+    left: 100%;
+    margin-left: -170px;
+    opacity: .5!important;
+  }
+  [data-ur-id="ima_shape"] > [data-ur-state*="next"]{
+    opacity: .1;
+    position: absolute;
+    top: 100px;
+    left: 0;
+  }
+  [data-ur-id="ima_shape"] > [data-ur-state*="prev"]{
+    opacity: .1;
+    position: absolute;
+    top: 100px;
+    left: 100%;
+    margin-left: -170px;
+  }
+}
