restructure carousel code

--- a/examples/site/_layouts/widgets.html
+++ b/examples/site/_layouts/widgets.html
@@ -4,6 +4,7 @@
     <title>Uranium JS | {{ page.title }}</title>
     <script src="{{site.url}}../src/uranium-pretty.js"></script>
     <script>
+    describe = function(){};
     if (location.hostname == "localhost")
       document.write('<script src="{{site.url}}..\/src\/jasmine.js"><\/script>\
                       <script src="{{site.url}}..\/src\/jasmine-html.js"><\/script>\
